--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
-pandas 
-numpy
+aiofiles
+dill
+dnspython
+database-connect
+evidently
+Flask
+httptools
+imblearn
+ipykernel
+jinja2
+mypy-boto3-s3
+pip-chill
+pymongo
+python-dotenv
+python-multipart
+seaborn
+types-s3transfer
+uvicorn
+watchfiles
+websockets
+wincertstore
+xgboost
+neuro-mf
 boto3
--e.
