--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,21 +74,24 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      
-      
+
       - name: Pull latest images
         run: |
-         docker pull ${{ secrets.AWS_ECR_REPO_URI }}:latest
-         
-                
-      # - name: Stop and remove visibility container if running
-      #   run: |
-      #    docker ps -q --filter "name=visibility" | grep -q . && docker stop visibility && docker rm -fv visibility
+          docker pull ${{ secrets.AWS_ECR_REPO_URI }}:latest
+
+      - name: Stop and remove existing sensor container
+        run: |
+          docker ps -a -q --filter "name=^sensor$" | grep -q . && docker rm -f sensor || true
+
       - name: Run Docker Image to serve users
         run: |
-         docker run -d -p 8080:8080 --name=sensor -e 'MONGO_DB_URL=${{ secrets.MONGO_DB_URL }}' -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}' ${{ secrets.AWS_ECR_REPO_URI }}:latest
+          docker run -d -p 8080:8080 --name=sensor \
+            -e 'MONGO_DB_URL=${{ secrets.MONGO_DB_URL }}' \
+            -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' \
+            -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' \
+            -e 'AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}' \
+            ${{ secrets.AWS_ECR_REPO_URI }}:latest
 
       - name: Clean previous images and containers
         run: |
-         docker system prune -f
- 
+          docker system prune -f
